--- a/Spotify/stylesheets/main.css
+++ b/Spotify/stylesheets/main.css
@@ -38,34 +38,51 @@
   --primary-color: black;
   --secondary-color: #4bb84a;
   --light-color: white;
+  --tertiary-color: #0691ff;
 }
 html {
   font-family: var(--primary-font);
   font-size: 16px;
 }
-.menu {
-  padding: 16px;
+.wrapper {
+  max-width: 1200px;
+  margin: auto;
+  width: 100%;
+  border: 1px solid green;
+  padding: 15px;
 }
+
 /**HEADER**/
 
 .header {
   background-color: var(--primary-color);
+}
+
+.header .wrapper {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 15px;
 }
 .header-logo {
   display: inline-block;
-  width: 200px;
+  width: 115px;
 }
 .header-logo img {
   width: 100%;
+}
+.header-mobile-button {
+  display: block;
+  background-image: url("../images/menu-icon.png");
+  background-size: 100%;
+  width: 20px;
+  height: 20px;
 }
 
 .header-menu {
   padding: 0px;
   color: var(--light-color);
+  display: none;
 }
 .header-menu li {
   display: inline-block;
@@ -78,4 +95,26 @@ html {
 .header-menu li a {
   padding: 15px;
   font-weight: bold;
+}
+
+/**HERO**/
+.hero {
+  background-color: var(--tertiary-color);
+  color: var(--light-color);
+}
+
+.hero .wrapper {
+  height: 50vh;
+}
+@media all and (min-width: 768px) {
+  .header-menu {
+    display: block;
+  }
+  .header-mobile-button {
+    display: none;
+  }
+  .hero .wrapper {
+    background: url("../images/premium_dancer.png") no-repeat;
+    background-position: top right;
+  }
 }
