--- a/modulo1-practica-fin-de-semana/src/scss/core/_variables.scss
+++ b/modulo1-practica-fin-de-semana/src/scss/core/_variables.scss
@@ -1,6 +1,8 @@
 // fonts
-$font-main: "Roboto", sans-serif;
+$primary-font: "Source Sans Pro", sans-serif;
 
 // colors
-$color-white: #f3f4f5;
-$color-secondary: #999;
+$primary-color: #15339b;
+$secondary-color: #de25e0;
+$light-color: #ffffff;
+$font-color: #000000;
