--- a/modulo1-practica-fin-de-semana/src/scss/layout/_page.scss
+++ b/modulo1-practica-fin-de-semana/src/scss/layout/_page.scss
@@ -1,7 +1,6 @@
+html {
+  font-size: 14px;
+}
 body {
-  padding: 2rem;
-  height: 100vh;
-  background: url("../images/logo-adalab.png") center center no-repeat
-    $color-white;
-  font-family: $font-main;
+  font-family: $primary-font;
 }
