--- a/modulo1-practica-fin-de-semana/src/scss/main.scss
+++ b/modulo1-practica-fin-de-semana/src/scss/main.scss
@@ -1,7 +1,11 @@
-@import 'core/variables';
-@import 'core/reset';
-@import 'components/links';
-@import 'layout/page';
-@import 'layout/header';
-@import 'layout/footer';
-@import 'pages/index';
+@import "core/reset";
+@import "core/mixins";
+@import "core/variables";
+@import "layout/header";
+@import "layout/hero";
+@import "layout/team";
+@import "layout/members";
+@import "layout/page";
+@import "layout/footer";
+@import "components/links";
+@import "pages/index";
