--- a/modulo1-practica-fin-de-semana/src/html/partials/hero.html
+++ b/modulo1-practica-fin-de-semana/src/html/partials/hero.html
@@ -1,8 +1,5 @@
 <section class="hero">
   <div class="wrapper">
-    <img
-      src="../../assets/images/foto-grupal-provisional.jpg"
-      alt="Foto del equipo"
-    />
+    <!-- <img src="../../assets/images/slider-home.jpg" alt="Foto del equipo" /> -->
   </div>
 </section>
