--- a/modulo1-practica-fin-de-semana/src/scss/main.scss
+++ b/modulo1-practica-fin-de-semana/src/scss/main.scss
@@ -3,8 +3,8 @@
 @import "core/variables";
 @import "layout/header";
 @import "layout/hero";
-@import "layout/team";
-@import "layout/members";
+@import "layout/description";
+@import "layout/article";
 @import "layout/page";
 @import "layout/footer";
 @import "components/links";
