--- a/modulo1-practica-fin-de-semana/src/html/partials/hero.html
+++ b/modulo1-practica-fin-de-semana/src/html/partials/hero.html
@@ -1,5 +1,13 @@
 <section class="hero">
   <div class="wrapper">
-    <!-- <img src="../../assets/images/slider-home.jpg" alt="Foto del equipo" /> -->
+    <div class="claim">
+      <h2>
+        <span class="hyphen">- </span>This is Brook<span class="hyphen">
+          -</span
+        >
+        <span class="claim__bottom">A full service</span>
+        <span class="claim__bottom">creative agency.</span>
+      </h2>
+    </div>
   </div>
 </section>
