--- a/modulo1-practica-fin-de-semana/src/scss/layout/_header.scss
+++ b/modulo1-practica-fin-de-semana/src/scss/layout/_header.scss
@@ -1,10 +1,8 @@
-/** {
-  border: 1px solid red;
-}*/
 .header {
   width: 100%;
   background-color: $primary-color;
   position: fixed;
+  top: 0;
 }
 .header__menu {
   display: none;
