--- a/modulo1-practica-fin-de-semana/src/scss/layout/_hero.scss
+++ b/modulo1-practica-fin-de-semana/src/scss/layout/_hero.scss
@@ -2,11 +2,10 @@
   background-image: url("../../assets/images/slider-home.jpg");
   background-size: 100% 100%;
   background-repeat: no-repeat;
-  position: absolute;
+  position: relative;
   width: 100%;
-  height: 55vh;
-  top: 95px;
-
+  height: 50vh;
+  top: 60px;
   & h2 {
     color: $light-color;
     font-size: 40px;
@@ -25,7 +24,7 @@
   }
 }
 .claim {
-  height: 55vh;
+  height: 50vh;
 }
 @media all and (min-width: 1280px) {
   .claim__bottom {
