add articles in option section

--- a/modulo1-practica-fin-de-semana/src/html/partials/article.html
+++ b/modulo1-practica-fin-de-semana/src/html/partials/article.html
@@ -1,1 +1,13 @@
-
+<article class="article">
+  <div class="article__img">
+    <img src="@@imgSrc" alt="@imgAlt" />
+  </div>
+  <h4 class="article__title">Modern Design</h4>
+  <p>
+    Brook embraces a modern look with various enhanced predefined page elements.
+  </p>
+  <div class="moreInfo">
+    <p class="details">More details</p>
+    <span>➜</span>
+  </div>
+</article>
