--- a/modulo1-practica-fin-de-semana/src/html/partials/article.html
+++ b/modulo1-practica-fin-de-semana/src/html/partials/article.html
@@ -1,13 +1,16 @@
 <article class="article">
-  <div class="article__img">
-    <img src="@@imgSrc" alt="@imgAlt" />
-  </div>
-  <h4 class="article__title">Modern Design</h4>
-  <p>
-    Brook embraces a modern look with various enhanced predefined page elements.
-  </p>
-  <div class="moreInfo">
-    <p class="details">More details</p>
-    <span>➜</span>
+  <div class="article__wrapper">
+    <div class="article__img">
+      <img src="@@imgSrc" alt="@imgAlt" />
+    </div>
+    <h4 class="article__title">Modern Design</h4>
+    <p>
+      Brook embraces a modern look with various enhanced predefined page
+      elements.
+    </p>
+    <div class="moreInfo">
+      <p class="details">More details</p>
+      <span>➜</span>
+    </div>
   </div>
 </article>
