--- a/modulo1-practica-fin-de-semana/src/scss/layout/_article.scss
+++ b/modulo1-practica-fin-de-semana/src/scss/layout/_article.scss
@@ -1,12 +1,22 @@
 .article {
-  border: 1px solid rgba(224, 224, 209, 0.5);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
   padding: 40px 20px 40px 20px;
   margin: 20px 65px 20px 65px;
-
+  &__wrapper {
+    max-width: 1280px;
+    margin: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  &__img {
+    width: 90px;
+    border: 1px solid green;
+    & img {
+      width: 100%;
+    }
+  }
   &__title {
     font-size: 16px;
     font-weight: 700;
